--- a/praktikum1.html
+++ b/praktikum1.html
@@ -50,7 +50,7 @@
 
     <a href="detail_tempat_wisata.html">
 
-    <img src="Colouseum.jpg" width="134" height="89"></a>
+    <img src="Collouseum.jpg" width="134" height="89"></a>
 
     <b>Colloseum</b> : ada di Romawi
 
